Add corporate variant for Redshift connector: JFrog + Jenkins, no external ECR
Phase 5.7 pulls the connector image from AWS's ECR account
(292517598671), which is commonly blocked by egress policy or SCP in
corporate environments. Adds 5.7b covering how to proceed without it.

Key constraint, verified in the Lambda docs: Lambda can only pull
container images from Amazon ECR - third-party registries are not
supported, so JFrog cannot be the runtime registry. It can be the source
of truth and promotion gate, but the image must land in a private ECR
repo in the same account/region before Lambda can use it. The thing
that's actually blocked (AWS's external ECR account) is distinct from
your own account's ECR, which is almost always permitted.

The connector repo ships its own Dockerfile (a Lambda Java base image
with the jar unpacked into it), so the image can be built in-house and
AWS's registry never contacted. Documents the JFrog -> Jenkins -> ECR
pipeline with a Jenkinsfile sketch, noting JAVA_VERSION must be
overridden to 21 (the Dockerfile defaults to 11).

Also flags that Lambda re-fetches the image from ECR periodically, not
just at create time - deleting it after deploy puts the function into a
Failed state.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>